--- a/view/index.html
+++ b/view/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>cube preview</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://s0.ssl.qhres.com/static/362cfbb9fe9ef830.css">
+  <link rel="stylesheet" href="https://s0.ssl.qhres.com/static/bd6570ac8aa30fdf.css#cubesdk.0.3.1">
   <base target="_blank">
   <style>
     #tips {display: none; text-align: center; font-size: 18px; line-height: 1.5;}
@@ -25,7 +25,7 @@
   <div id="doc">
   </div>
   <div id="cube-temp"></div>
-  <script src="https://s0.ssl.qhres.com/static/07d9fa339655386f.js"></script>
+  <script src="https://s0.ssl.qhres.com/static/bfa8616e15c2af78.js#cubesdk.0.3.1"></script>
   <script type="module" src="/main.js"></script>
   <script>
     (function() {
