--- a/view/index.html
+++ b/view/index.html
@@ -32,12 +32,7 @@
       const id = new URLSearchParams(window.location.search).get('id');
       fetch('/get_info?id=' + id).then(async (resp) => {
         const data = await resp.json();
-
-        let res = '';
-        if (Array.isArray(data.res) && data.res[0]) {
-          res = data.res[0];
-        }
-
+        const res = data.res;
         const { init, CoolBox } = CubeSdk;
 
         init({
